<?xml version="1.0"?>
<package format="2">
  <name>limo_vision</name>
  <version>0.0.0</version>
  <description>The limo_vision package</description>

  <maintainer email="support@agilex.ai">agiley</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>darknet_ros</exec_depend>

</package>
